website/versioned_docs/version-2.4.x/cli/reference/run.md
---
title: 'run'
sidebar_label: 'run'
pagination_prev: null
pagination_next: null
---

Run Spice - starts the Spice runtime, installing if necessary.

`spice run` is a wrapper around the [`spiced`](./spiced) runtime binary. It applies developer-friendly defaults and forwards arguments after `--` to the runtime. To invoke the runtime directly (for containers, systemd units, or CI), see the [`spiced` reference](./spiced).

### Runtime selection

`spice run` and [`spice version`](./version) look for `spiced` in this order:

1. `$SPICED_PATH`.
2. Beside the running `spice` binary.
3. `$HOME/.spice/bin/spiced`, managed by [`spice install`](./install).
4. Under `sudo`, the invoking user's `~/.spice/bin/spiced`.

`PATH` is not searched. An invalid `$SPICED_PATH` causes an error; otherwise, `spice run` installs
the runtime if none is found.

Before launching, `spice run` logs the runtime it resolved and the rung it came from
(`Using the Spice.ai runtime at '<path>' (<source>).`). It is logged at `info` only when the
runtime is *not* the one [`spice install`](./install) manages — the case worth noticing — and at
`debug` otherwise, so an ordinary managed install does not add a line to every run.
[`spice version`](./version) reports the same path and source unconditionally.

### Usage

```shell
spice run [flags]
spice run [flags] -- [spiced flags]
```

#### Flags

- `-h`, `--help` Print this help message.
- `--endpoint` Configure the runtime endpoint. The URL scheme determines the endpoint type: `http://` or `https://` sets the HTTP endpoint, `grpc://` or `grpc+tls://` sets the Flight endpoint. Cannot be combined with `--http-endpoint` or `--flight-endpoint` for the same endpoint type.
- `--flight-endpoint` Configure runtime Flight endpoint. Defaults to `http://127.0.0.1:50051`.
- `--http-endpoint` Configure runtime HTTP endpoint. Defaults to `http://127.0.0.1:8090`.
- `--metrics-endpoint` Configure the runtime Prometheus metrics endpoint (disabled by default).

#### Spiced Flags

Flags that are passed to the `spiced` runtime directly using `--`.

`spice run` sets some of these itself, and `spiced` rejects a flag given twice:

- `--http` always collides through `spice run`, which passes its own. Use `--http-endpoint`.
- `--flight` and `--metrics` work after `--` on their own, and collide only when paired with
  `--flight-endpoint` or `--metrics-endpoint`.

Running `spiced` directly takes all three.

- `--http` Configure runtime HTTP address [default: 127.0.0.1:8090]
- `--flight` Configure runtime Flight address [default: 127.0.0.1:50051]
- `--metrics` Enable and configure the Prometheus metrics endpoint (disabled by default)
- `--tls-enabled` Enable TLS
- `--tls-certificate` The TLS PEM-encoded certificate
- `--tls-certificate-file` Path to the TLS PEM-encoded certificate file
- `--tls-key` The TLS PEM-encoded key
- `--tls-key-file` Path to the TLS PEM-encoded key file
- `--telemetry-enabled` Enable or disable anonymous telemetry
- `--pods-watcher-enabled` Enable the pods watcher (disabled by default)
- `--repl` Start a SQL REPL against the runtime's Flight endpoint
- `-v`, `--verbose` Enable verbose logging (use `-vv` for more detail)
- `--very-verbose` Enable very verbose logging
- `--set-runtime` Override [runtime configuration](../../reference/spicepod/#runtime) with a name/value pair specified as `name=value`. Multiple overrides can be specified by using the flag multiple times.
- `[PATH]` Positional argument specifying the path to a Spicepod directory or file. Supports local paths and `s3://` remote URLs. Directories must contain a `spicepod.yaml` (or `spicepod.yml`); file paths can use any name as long as the file declares `kind: Spicepod` and a recognized `version`.

### Examples

#### `--set-runtime`

The `--set-runtime` flag overrides runtime configuration values. It can be specified multiple times to set multiple values. It is used like this: `--set-runtime name=value`. The Spicepod YAML equivalent of that is:

```yaml
runtime:
  name: value
```

Examples:

`--set-runtime task_history.captured_output=none`:

```yaml
runtime:
  task_history:
    captured_output: none
```

`--set-runtime results_cache.enabled=false`:

```yaml
runtime:
  results_cache:
    enabled: false
```

`--set-runtime runtime.tls.enabled=true --set-runtime runtime.tls.certificate_file=/path/to/cert.pem --set-runtime runtime.tls.key_file=/path/to/key.pem`:

```yaml
runtime:
  tls:
    enabled: true
    certificate_file: /path/to/cert.pem
    key_file: /path/to/key.pem
```

#### `--endpoint`

```shell
# Set the HTTP bind address using scheme-based routing
spice run --endpoint http://0.0.0.0:8090

# Set the Flight bind address using scheme-based routing
spice run --endpoint grpc://0.0.0.0:50051
```

#### No arguments

```shell
spice run
```

#### `--captured-outputs none`

```shell
# Set task history captured outputs to none via --set-runtime
spice run -- --set-runtime task_history.captured_output=none
```

#### `--http-endpoint`

```shell
# Expose the HTTP server on all interfaces
spice run --http-endpoint 0.0.0.0:8090
```

`spice run -- --http 0.0.0.0:8090` fails with
`argument '--http <BIND_ADDRESS>' cannot be used multiple times`, because `spice run` passes its own
`--http`. See [Spiced Flags](#spiced-flags) for which flags can still go after `--`.

#### `--flight-endpoint`

```shell
# Expose the HTTP & Flight servers on all interfaces with TLS
spice run --http-endpoint 0.0.0.0:8090 --flight-endpoint 0.0.0.0:50051 -- --tls-enabled true --tls-certificate-file /path/to/cert.pem --tls-key-file /path/to/key.pem
```
